Updated to fix layout problem in Mavericks

--- a/Hidden File Toggle.dcproj/project/widget.wdgt/main.css
+++ b/Hidden File Toggle.dcproj/project/widget.wdgt/main.css
@@ -73,7 +73,7 @@ body {
     margin-top: 0px;
     opacity: 1;
     top: 20px;
-    width: 52px;
+    width: 54px;
     right: 33px;
     margin-left: auto;
     left: 122px;
